--- a/.github/workflows/releaser.yml
+++ b/.github/workflows/releaser.yml
@@ -39,8 +39,7 @@ jobs:
         with:
           homebrew_owner: afstanton
           homebrew_tap: homebrew-meshstack
-          formula_folder: .
           formula_includes: meshstack.rb
           install: |
-            brew install --build-from-source ./meshstack.rb
+            bin.install "meshstack"
           github_token: ${{ secrets.GH_PAT }}
